<resources>
    <string name="app_name">CityInfo</string>
    <string name="empty">Список город пуст</string>
    <string-array name="Cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
        <item>Новосибирск</item>
        <item>Самара</item>
    </string-array>

    <string name="city_name">Enter the city name and press "ОК"</string>
    <string name="OK">OK</string>
    <string name="now">24.04.2019</string>
    <string name="tomorrow">24.04.2019</string>
    <string name="after">24.04.2019</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="back">Back</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temp_now_day">+5</string>
    <string name="temp_tomorrow_day">-18</string>
    <string name="temp_after_day">+43</string>
    <string name="temp_now_night">0</string>
    <string name="temp_tomorrow_night">-56</string>
    <string name="temp_after_nightt">+29</string>
    <string name="hudmidity_now">66%</string>
    <string name="hudmidity_tomorrow">78%</string>
    <string name="hudmidity_after">146%</string>
    <string name="pressure_now">755</string>
    <string name="pressure_tomorrow">956</string>
    <string name="pressure_after">357</string>
    <string name="history">History</string>
</resources>
